@@ -17,8 +17,10 @@ CURRENT VERSION:
 
 	OS X java 1.7 maps dir missing deadlock fix
 	OS X java 1.7 open html help in browser fix
+	pt_PT update by Pipanni
 
 	Android 50 Send feedback option added
+		   can change default app language
 
 1.1.1.5
 
